--- a/index.html
+++ b/index.html
@@ -1,77 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Husig AI - Analytics Service Provider</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>husig.ai</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css">
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <style>
+    @media(max-width: 500px) {
+      .reverse-columns {
+        flex-direction: column-reverse;
+        display: flex;
+      }
+    }
+
+    .titled {
+      font-family: 'Merriweather', serif !important;
+      font-size: 38px !important;
+      font-weight: 400 !important;
+      line-height: 64px !important;
+    }
+
+    .subtitled {
+      font-family: 'Merriweather', serif !important;
+      font-size: 22px !important;
+      font-weight: 400 !important;
+      line-height: 36px !important;
+    }
+  </style>
 </head>
+
 <body>
-  <header>
-    <nav class="navbar">
+  <!-- NavBar va a todo lo ancho -->
+  <nav class="navbar" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="/">
+        <img src="assets/logo.png" >
+      </a>
+    </div>
+
+    <!-- <div class="navbar-menu">
+
+      <div class="navbar-end">
+        <a class="navbar-item">
+          WHY?
+        </a>
+
+        <a class="navbar-item">
+          BUY
+        </a>
+
+        <a class="navbar-item">
+          ILLUSTRATION SERIES
+        </a>
+
+        <a class="navbar-item">
+          EXCLUSIVE ILLUSTRATIONS
+        </a>
+
+      </div> -->
+    </div>
+  </nav>
+
+  <!-- Hero del producto -->
+  <section class="hero is-white is-fullheight">
+    <div class="hero-body">
       <div class="container">
-        <h1 class="logo">Husig AI</h1>
-        <ul class="nav-links">
-          <li><a href="#services">Services</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+        <div class="columns  is-vcentered reverse-columns">
+          <div class="column
+          is-10-mobile is-offset-1-mobile
+          is-10-tablet is-offset-1-tablet
+          is-5-desktop is-offset-1-desktop
+          is-5-widescreen is-offset-1-widescreen
+          is-5-fullhd is-offset-1-fullhd" data-aos="fade-down">
+            <h1 class="title titled is-1 mb-6">
+                Human in the loop Analytics
+            </h1>
+            <h2 class=" subtitled subtitle has-text-grey is-4 has-text-weight-normal is-family-sans-serif">
+                Ethical, pragmatic and human-centered approach to the adoption of AI and data intelligence. </br> </br> 
+            </h2>
+          </div>
+          <div data-aos="fade-right" class="column
+          is-10-mobile is-offset-1-mobile
+          is-10-tablet is-offset-1-tablet
+          is-4-desktop is-offset-1-desktop
+          is-4-widescreen is-offset-1-widescreen
+          is-4-fullhd is-offset-1-fullhd">
+            <figure class="image is-square">
+              <img src="assets/feature.png">
+            </figure>
+          </div>
 
-  <section id="hero">
-    <div class="container">
-      <h2>Welcome to Husig AI</h2>
-      <p>Empowering businesses with data-driven insights</p>
-      <a href="#services" class="btn">Our Services</a>
-    </div>
-  </section>
-
-  <section id="services">
-    <div class="container">
-      <h2>Our Services</h2>
-      <div class="service">
-        <h3>Data Engineering</h3>
-        <p>We offer robust data engineering solutions tailored to your business needs.</p>
-      </div>
-      <div class="service">
-        <h3>Dashboarding</h3>
-        <p>Visualize your data effectively with our interactive dashboard solutions.</p>
-      </div>
-      <div class="service">
-        <h3>Machine Learning</h3>
-        <p>Unlock the power of machine learning to gain valuable insights from your data.</p>
+        </div>
       </div>
     </div>
   </section>
 
-  <section id="about">
-    <div class="container">
-      <h2>About Us</h2>
-      <p>Husig AI specializes in providing advanced analytics services including data engineering, dashboarding, machine learning, reporting, experimentation, and operational research. Our unique approach includes human-in-the-loop AI, ensuring that our solutions are both technologically advanced and human-centric.</p>
-      <p>We excel in technologies such as DBT, AWS Airflow, Prefect, Data Warehousing, and LLMs. Our expertise spans across various domains including healthcare, education, disaster management, and more.</p>
-      <p>In addition to our core services, we are actively engaged in building the developer community in Nepal, fostering collaboration and innovation.</p>
+  
+
+  <section class="hero is-medium has-text-centered">
+    <div class="hero-body">
+      <div class="container">
+        <div class="columns is-centered">
+          <div data-aos="zoom-in-up" class="column is-8">
+            <h1 class="title titled is-1 mb-6">
+              Artificial intelligence for <span id="typewriter"></span>
+            </h1>
+            <h2 class="subtitle subtitled">
+                Start your digital transformation.
+          </h2>
+          </div>
+        </div>
+
+      </div>
     </div>
   </section>
 
-  <section id="contact">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <p>Have a project in mind or want to learn more about our services? Get in touch with us!</p>
-      <form>
-        <input type="text" placeholder="Your Name">
-        <input type="email" placeholder="Your Email">
-        <textarea placeholder="Your Message"></textarea>
-        <button type="submit" class="btn">Send Message</button>
-      </form>
-    </div>
-  </section>
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2024 Husig AI. All rights reserved.</p>
-    </div>
-  </footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/2.13.1/core.min.js"></script>
+  <script>
+    new Typewriter('#typewriter', {
+      strings: ['healthcare', 'development', 'privacy', 'innovation', 'logistics', 'media', 'education'],
+      autoStart: true,
+      loop: true,
+    });
+  </script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      once: true
+    });
+  </script>
 </body>
+
 </html>
