generate basic code

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
           is-5-widescreen is-offset-1-widescreen
           is-5-fullhd is-offset-1-fullhd" data-aos="fade-down">
             <h1 class="title titled is-1 mb-6">
-                Human in the loop Analytics
+                Human in the loop analytics
             </h1>
             <h2 class=" subtitled subtitle has-text-grey is-4 has-text-weight-normal is-family-sans-serif">
-                Ethical, pragmatic and human-centered approach to the adoption of AI and data intelligence. </br> </br> 
+                Ethical, pragmatic and human-centered approach for the adoption of data intelligence. </br> </br> 
             </h2>
           </div>
           <div data-aos="fade-right" class="column
