--- a/index.html
+++ b/index.html
@@ -4,69 +4,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>husig.ai</title>
+  <title>Husig.ai</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.1/css/bulma.min.css">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <style>
-    @media(max-width: 500px) {
-      .reverse-columns {
-        flex-direction: column-reverse;
-        display: flex;
-      }
-    }
-
-    .titled {
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    a {
       font-family: 'Merriweather', serif !important;
-      font-size: 38px !important;
-      font-weight: 400 !important;
-      line-height: 64px !important;
-    }
-
-    .subtitled {
-      font-family: 'Merriweather', serif !important;
-      font-size: 22px !important;
-      font-weight: 400 !important;
-      line-height: 36px !important;
     }
   </style>
 </head>
 
+
 <body>
-  <!-- NavBar va a todo lo ancho -->
   <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="assets/logo.png" >
+        <img src="assets/logo.png" class="primary-logo" height="500"> 
       </a>
     </div>
-
-    <!-- <div class="navbar-menu">
-
-      <div class="navbar-end">
-        <a class="navbar-item">
-          WHY?
-        </a>
-
-        <a class="navbar-item">
-          BUY
-        </a>
-
-        <a class="navbar-item">
-          ILLUSTRATION SERIES
-        </a>
-
-        <a class="navbar-item">
-          EXCLUSIVE ILLUSTRATIONS
-        </a>
-
-      </div> -->
-    </div>
   </nav>
+  
 
-  <!-- Hero del producto -->
   <section class="hero is-white is-fullheight">
     <div class="hero-body">
       <div class="container">
@@ -78,10 +47,11 @@
           is-5-widescreen is-offset-1-widescreen
           is-5-fullhd is-offset-1-fullhd" data-aos="fade-down">
             <h1 class="title titled is-1 mb-6">
-                Human in the loop analytics
+              Human in the Loop Analytics
             </h1>
             <h2 class=" subtitled subtitle has-text-grey is-4 has-text-weight-normal is-family-sans-serif">
-                Ethical, pragmatic and human-centered approach for the adoption of data intelligence. </br> </br> 
+              Ethical, pragmatic, and human-centered approach for adopting data intelligence. <br>
+              
             </h2>
           </div>
           <div data-aos="fade-right" class="column
@@ -91,16 +61,168 @@
           is-4-widescreen is-offset-1-widescreen
           is-4-fullhd is-offset-1-fullhd">
             <figure class="image is-square">
-              <img src="assets/feature.png">
+              <img src="https://4.bp.blogspot.com/-Kog9tekKz5A/U1IqRVeK99I/AAAAAAAACp0/0uOMoFOJxds/s1600/Rplot26.png">
             </figure>
           </div>
-
         </div>
       </div>
     </div>
   </section>
 
+  <section class="section">
+    <div class="container">
+      <h2 class="title is-2">Services</h2>
+      <div class="columns">
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-48x48">
+                    <img src="assets/data_engineering.png" alt="Data Engineering">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-4">Data Engineering</p>
+                  <p class="subtitle is-6">Comprehensive data engineering solutions to optimize data pipelines and workflows. From data ingestion to preprocessing, we streamline your data processes to ensure efficient data handling and management.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-48x48">
+                    <img src="assets/data_science.png" alt="Data Analysis">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-4">Data Analysis</p>
+                  <p class="subtitle is-6">In-depth analysis leveraging advanced techniques to derive actionable insights from your data. Our experienced data analysts uncover meaningful patterns and trends, providing valuable insights for informed decision-making.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-48x48">
+                    <img src="assets/ab-testing.png" alt="Experimentation">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-4">Experimentation</p>
+                  <p class="subtitle is-6">Conduct experiments and tests to validate hypotheses and refine models. Our experimentation services help optimize algorithms and improve model performance through iterative testing and validation.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-48x48">
+                    <img src="/assets/dashboarding.png" alt="Dashboarding">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-4">Dashboarding</p>
+                  <p class="subtitle is-6">Visualize key metrics and insights with interactive dashboards. Our dashboarding solutions enable stakeholders to monitor performance, track KPIs, and make data-driven decisions with ease.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-48x48">
+                    <img src="assets/supply-chain-management.png" alt="Operations Research">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-4">Operations Research</p>
+                  <p class="subtitle is-6">Apply optimization and simulation techniques to solve complex business problems. Our operations research services help organizations streamline processes, optimize resources, and improve decision-making.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column is-4">
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-48x48">
+                    <img src="assets/deep-learning.png" alt="Machine Learning">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-4">Machine Learning</p>
+                  <p class="subtitle is-6">Harness the power of machine learning algorithms to uncover insights and make predictions. Our machine learning solutions enable automated decision-making, predictive analytics, and personalized recommendations.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   
+
+  <section class="section contact-section" style="background-image: url('https://cdn.sanity.io/images/tlr8oxjg/production/fdf314615dab9455b1e163ae8ab698abde8453c8-1456x816.png?w=3840&q=80&fit=clip&auto=format');">
+    <div class="container">
+        <h2 class="title is-2 has-text-white">Contact Us</h2>
+        <div class="columns is-centered">
+            <div class="column is-half">
+                <div class="card">
+                    <div class="card-content">
+                        <form action="https://formspree.io/f/xyyrddzy" method="POST">
+                            <div class="field">
+                                <label class="label">Name</label>
+                                <div class="control">
+                                    <input class="input" type="text" placeholder="Enter your name" name="name">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">Email</label>
+                                <div class="control">
+                                    <input class="input" type="email" placeholder="Enter your email" name="_replyto">
+                                </div>
+                            </div>
+                            <div class="field">
+                                <label class="label">Message</label>
+                                <div class="control">
+                                    <textarea class="textarea" placeholder="Enter your message" name="message"></textarea>
+                                </div>
+                            </div>
+                            <div class="field is-grouped is-grouped-centered">
+                                <div class="control">
+                                    <button class="button is-primary" type="submit">Submit</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+  
+  </section>
 
   <section class="hero is-medium has-text-centered">
     <div class="hero-body">
@@ -108,17 +230,14 @@
         <div class="columns is-centered">
           <div data-aos="zoom-in-up" class="column is-8">
             <h1 class="title titled is-1 mb-6">
-              Artificial intelligence for <span id="typewriter"></span>
+              AI for <span id="typewriter"></span>
             </h1>
             <h2 class="subtitle subtitled">
-                Start your digital transformation.
-          </h2>
+              Book a session!
+            </h2>
           </div>
         </div>
-
       </div>
-    </div>
-  </section>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/2.13.1/core.min.js"></script>
