--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           is-5-widescreen is-offset-1-widescreen
           is-5-fullhd is-offset-1-fullhd" data-aos="fade-down">
             <h1 class="title titled is-1 mb-6">
-              Human in the Loop Analytics
+              Decision science for your business
             </h1>
             <h2 class=" subtitled subtitle has-text-grey is-4 has-text-weight-normal is-family-sans-serif">
               Ethical, pragmatic, and human-centered approach for adopting data intelligence. <br>
@@ -61,7 +61,7 @@
           is-4-widescreen is-offset-1-widescreen
           is-4-fullhd is-offset-1-fullhd">
             <figure class="image is-square">
-              <img src="https://4.bp.blogspot.com/-Kog9tekKz5A/U1IqRVeK99I/AAAAAAAACp0/0uOMoFOJxds/s1600/Rplot26.png">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Conformal_Warping_Around_The_Cardioid_In_The_Mandelbrot_Set.gif">
             </figure>
           </div>
         </div>
