--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
       font-family: 'Merriweather', serif !important;
     }
   </style>
+  <style>
+  .navbar-item img {
+    max-height: 3.75rem;
+  }
+  </style>
 </head>
 
 
@@ -47,11 +52,10 @@
           is-5-widescreen is-offset-1-widescreen
           is-5-fullhd is-offset-1-fullhd" data-aos="fade-down">
             <h1 class="title titled is-1 mb-6">
-              Decision science for your business
+              Decision Sciences for your business
             </h1>
             <h2 class=" subtitled subtitle has-text-grey is-4 has-text-weight-normal is-family-sans-serif">
-              Ethical, pragmatic, and human-centered approach for adopting data intelligence. <br>
-              
+              Ethical, pragmatic, and human-centered approach for adopting data intelligence at scale. <br>
             </h2>
           </div>
           <div data-aos="fade-right" class="column
@@ -60,8 +64,8 @@
           is-4-desktop is-offset-1-desktop
           is-4-widescreen is-offset-1-widescreen
           is-4-fullhd is-offset-1-fullhd">
-            <figure class="image is-square">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Conformal_Warping_Around_The_Cardioid_In_The_Mandelbrot_Set.gif">
+            <figure class="image is-5by4">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Rosenbrock3.gif">
             </figure>
           </div>
         </div>
