update logo and display image

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   </section>
   
 
-  <section class="section contact-section" style="background-image: url('https://cdn.sanity.io/images/tlr8oxjg/production/fdf314615dab9455b1e163ae8ab698abde8453c8-1456x816.png?w=3840&q=80&fit=clip&auto=format');">
+  <section class="section contact-section" style="background-image: url('https://cdn.sanity.io/images/tlr8oxjg/production/fdf314615dab9455b1e163ae8ab698abde8453c8-1456x816.png');">
     <div class="container">
         <h2 class="title is-2 has-text-white">Contact Us</h2>
         <div class="columns is-centered">
@@ -226,32 +226,14 @@
 </section>
 
   
-  </section>
+<footer class="footer">
+  <div class="content has-text-centered">
+    <p>
+      The website is a work in progress.
+    </p>
+  </div>
+</footer>
 
-  <section class="hero is-medium has-text-centered">
-    <div class="hero-body">
-      <div class="container">
-        <div class="columns is-centered">
-          <div data-aos="zoom-in-up" class="column is-8">
-            <h1 class="title titled is-1 mb-6">
-              AI for <span id="typewriter"></span>
-            </h1>
-            <h2 class="subtitle subtitled">
-              Book a session!
-            </h2>
-          </div>
-        </div>
-      </div>
-
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/TypewriterJS/2.13.1/core.min.js"></script>
-  <script>
-    new Typewriter('#typewriter', {
-      strings: ['healthcare', 'development', 'privacy', 'innovation', 'logistics', 'media', 'education'],
-      autoStart: true,
-      loop: true,
-    });
-  </script>
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
