update font size

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
     max-height: 3.75rem;
   }
   </style>
+  <style>
+    .subtitle.is-6 {
+    font-size: .8rem;
+}
+  </style>
 </head>
 
 
@@ -141,7 +146,7 @@
                 </div>
                 <div class="media-content">
                   <p class="title is-4">Dashboarding</p>
-                  <p class="subtitle is-6">Visualize key metrics and insights with interactive dashboards. Our dashboarding solutions enable stakeholders to monitor performance, track KPIs, and make data-driven decisions with ease.</p>
+                  <p class="subtitle is-6">Visualize key metrics and insights with interactive dashboards. Our dashboarding solutions enable stakeholders to monitor performance, track KPIs, and make data-driven decisions with ease, at scale.</p>
                 </div>
               </div>
             </div>
@@ -229,7 +234,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      The website is a work in progress.
+      Husig.AI 2024
     </p>
   </div>
 </footer>
