teat submodue transition

--- a/about/index.html
+++ b/about/index.html
@@ -242,7 +242,7 @@
   <div id=""></div>
 
   <h1 class="serv_Header" id="">
-    Hi, We're<span class="raw_data_span">HuSig</span>
+    Hi, We are<span class="raw_data_span">HuSig</span>
   </h1>
 
   <p class="serv_Para">
