remove redundant assets

--- a/index.html
+++ b/index.html
@@ -328,8 +328,9 @@
   </button>
   <div id="myDropdown-mm-a" class="dropdown-content_mm_a">
     <button class="myDropdonw_items tab_button" data-tab="tab1"><a>Analytics</a></button>
-    <button class="myDropdonw_items tab_button" data-tab="tab2"><a>Decision Sciences</a></button>
-    <button class="myDropdonw_items tab_button" data-tab="tab3"><a>Data Engineering and Infra</a></button>
+    <button class="myDropdonw_items tab_button" data-tab="tab2"><a>Artificial Intelligence</a></button>
+    <button class="myDropdonw_items tab_button" data-tab="tab3"><a>Data Engineering</a></button>
+    <button class="myDropdonw_items tab_button" data-tab="tab3"><a>Operations Research</a></button>
   </div>
 </div>
 
@@ -398,7 +399,7 @@
         <div class="left">
           <img
             class="sec2_illust"
-            src="images/homepage/DecisionSciences.webp"
+            src="images/homepage/DecisionScienceIllustCrop.webp"
             alt="Analytics Illustration"
           />
         </div>
@@ -986,7 +987,6 @@
     <footer><section id="contact-us">
   <div id="left-contact">
     <h2 class="husig_h2_tag">Contact Us</h2>
-    <img src="/images/homepage/contact_us_HerO.webp" alt="contactus">
   </div>
   <div id="right-contact">
     <div class="label_group">
