--- a/data_engineering/index.html
+++ b/data_engineering/index.html
@@ -251,7 +251,7 @@
   <h2 class="serv_Title">Data Engineering</h2>
 
   <div class="serv_Hero_div">
-    <img src="../../images/homepage/DataEng.webp" alt="" />
+    <img src="/images/homepage/DataEng.webp" alt="" />
     <div class="text_div_serv_page">
       <p class="serv_Para">
         At HuSig, we empower businesses to unlock data-driven growth through
@@ -272,14 +272,14 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
           Analytical Infrastructure        </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -292,7 +292,7 @@ Data Platform Architecture        </li>
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -300,7 +300,7 @@ Data Platform Architecture        </li>
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -313,7 +313,7 @@ Data Platform Architecture        </li>
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -321,7 +321,7 @@ Data Platform Architecture        </li>
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -334,7 +334,7 @@ Data Platform Architecture        </li>
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -342,7 +342,7 @@ Data Platform Architecture        </li>
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -355,7 +355,7 @@ Data Platform Architecture        </li>
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -363,7 +363,7 @@ Data Platform Architecture        </li>
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
