--- a/husig_fabri/index.html
+++ b/husig_fabri/index.html
@@ -254,7 +254,7 @@
 
   <div class="plat_div_bottom">
     <div class="plat_left_div">
-      <img src="../images/platforms/husigFabri.webp" alt="husig fabri" />
+      <img src="/images/platforms/husigFabri.webp" alt="husig fabri" />
     </div>
     <div class="plat_right_div">
       <div class="accordion-123">
