--- a/operations_research/index.html
+++ b/operations_research/index.html
@@ -250,7 +250,7 @@
   <h2 class="serv_Title">Operations Research</h2>
 
   <div class="serv_Hero_div">
-    <img src="../../images/homepage/Analytics.webp" alt="" />
+    <img src="/images/homepage/Analytics.webp" alt="" />
     <div class="text_div_serv_page">
       <p class="serv_Para">
         Our Analytics services are crafted to harness the power of data,
@@ -276,7 +276,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -284,7 +284,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -292,7 +292,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -305,7 +305,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -313,7 +313,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -326,7 +326,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -334,7 +334,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -347,7 +347,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -355,7 +355,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -369,7 +369,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -377,7 +377,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -385,7 +385,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -393,7 +393,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -406,7 +406,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -414,7 +414,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -422,7 +422,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
