--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -251,7 +251,7 @@
 
 
   <div class="serv_Hero_div">
-    <img src="../../images/homepage/DecisionScienceIllustCrop.webp" alt="" />
+    <img src="/images/homepage/DecisionScienceIllustCrop.webp" alt="" />
     <div class="text_div_serv_page">
       <p class="serv_Para">
         At HuSig, we empower organizations to make data-driven decisions that
@@ -271,7 +271,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -279,7 +279,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -292,7 +292,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -300,7 +300,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -313,7 +313,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -321,7 +321,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -334,7 +334,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -347,7 +347,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -355,7 +355,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -368,7 +368,7 @@
       <ul class="serv_ListText">
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
@@ -376,7 +376,7 @@
         </li>
         <li>
           <img
-            src="../../images/homepage/list_icon.svg"
+            src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
           />
