--- a/about/index.html
+++ b/about/index.html
@@ -324,6 +324,10 @@
     <footer><section id="contact-us">
   <div id="left-contact">
     <h2 class="husig_h2_tag">Contact Us</h2>
+
+
+    <img src="/images/homepage/contact_us_HerO.webp" alt="contactus">
+ 
   </div>
   <div id="right-contact">
     <div class="label_group">
