--- a/data_engineering/index.html
+++ b/data_engineering/index.html
@@ -389,6 +389,10 @@ Data Platform Architecture        </li>
     <footer><section id="contact-us">
   <div id="left-contact">
     <h2 class="husig_h2_tag">Contact Us</h2>
+
+
+    <img src="/images/homepage/contact_us_HerO.webp" alt="contactus">
+ 
   </div>
   <div id="right-contact">
     <div class="label_group">
