--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
   lang="en-us"
   dir="ltr"
 >
-  <head>
+  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-8NRNHKW4HD"
@@ -82,37 +82,37 @@
 />
 
 
-      <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.min.cceadcc5ed5921858ad756fab05cff818682e571b7406736cc21888bcfffded4.css" integrity="sha256-zOrcxe1ZIYWK11b6sFz/gYaC5XG3QGc2zCGIi8//3tQ=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.css">
  
-      <link rel="stylesheet" href="/css/contact_us_form.min.78702a7028ada28827c17f75e36db0f7067664ae8753f0d888b6b166ba7bffe6.css" integrity="sha256-eHAqcCitoognwX91422w9wZ2ZK6HU/DYiLaxZrp7/&#43;Y=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/contact_us_form.css">
  
-      <link rel="stylesheet" href="/css/homepage/homepageFaq.min.c4c228e473964211a5d5bd262223951dc75a955e3458fe5cc76d42a9ae0df323.css" integrity="sha256-xMIo5HOWQhGl1b0mIiOVHcdalV40WP5cx21Cqa4N8yM=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/homepage/homepageFaq.css">
  
-      <link rel="stylesheet" href="/css/homepage/homepageSection5.min.ac0a28048f48739498f729a75d4f3f53159a7a8534787347326ebda6ce2262e1.css" integrity="sha256-rAooBI9Ic5SY9ymnXU8/UxWaeoU0eHNHMm69ps4iYuE=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/homepage/homepageSection5.css">
  
-      <link rel="stylesheet" href="/css/homepage/homepageTestimonials.min.0cd9246b2c044f78a6cb6834e245cc6aef5fea5060a757a8549ae08ad7f26e7a.css" integrity="sha256-DNkkaywET3imy2g04kXMau9f6lBgp1eoVJrgitfybno=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/homepage/homepageTestimonials.css">
  
-      <link rel="stylesheet" href="/css/main.min.127783c39a16569766f86f71205d910897dec0e0a9151febefd114950f941651.css" integrity="sha256-EneDw5oWVpdm&#43;G9xIF2RCJfewOCpFR/r79EUlQ&#43;UFlE=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
  
-      <link rel="stylesheet" href="/css/homepage.min.605c552560c2ef0cb4ffa9a551340fb8abb5e6a45ae4ec3ee0aaa8f62c4796a1.css" integrity="sha256-YFxVJWDC7wy0/6mlUTQPuKu15qRa5Ow&#43;4Kqo9ixHlqE=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/homepage.css">
  
-      <link rel="stylesheet" href="/css/my_components.min.f31d97e2464875bd8a15794d39876cf87054836a39e37bdc774686a98232bf28.css" integrity="sha256-8x2X4kZIdb2KFXlNOYds&#43;HBUg2o543vcd0aGqYIyvyg=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/my_components.css">
  
-      <script src="/js/main.0c4153223239301b925bee9813e11ebe135f8a58b95d695161c7490826bd3e27.js" integrity="sha256-DEFTIjI5MBuSW&#43;6YE&#43;EevhNfili5XWlRYcdJCCa9Pic=" crossorigin="anonymous"></script>
+      <script src="/js/main.js"></script>
  
-      <link rel="stylesheet" href="/css/services_page/serv_section_1.min.9f337b1e034e6f21eabdca1887cc7a305d1b381a22ac94e0d5d6e60b2612a3b0.css" integrity="sha256-nzN7HgNObyHqvcoYh8x6MF0bOBoirJTg1dbmCyYSo7A=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/services_page/serv_section_1.css">
  
-      <link rel="stylesheet" href="/css/services_page/serv_section_2.min.35c18cf3ee848c3a6455835b5592220e06501d4cb7e57783524db6134a84285f.css" integrity="sha256-NcGM8&#43;6EjDpkVYNbVZIiDgZQHUy35XeDUk22E0qEKF8=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/services_page/serv_section_2.css">
  
-      <link rel="stylesheet" href="/css/platform/platform.min.96ecef5778e3f01608636ac5e78a6bbed818f352b4b84e43482cb34ac3669501.css" integrity="sha256-luzvV3jj8BYIY2rF54prvtgY81K0uE5DSCyzSsNmlQE=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/platform/platform.css">
  
-      <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.min.0eb2ec5a3fe23f85115cd53a76b93615061bab94b70129887126749a0d90bb51.css" integrity="sha256-DrLsWj/iP4URXNU6drk2FQYbq5S3ASmIcSZ0mg2Qu1E=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.css">
  
-      <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.min.af79c53885cabbe8f57e5d8a6238f01166dd0d07b08c3cf121091290b36ea8ee.css" integrity="sha256-r3nFOIXKu&#43;j1fl2KYjjwEWbdDQewjDzxIQkSkLNuqO4=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.css">
  
-      <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.min.e1cfc102b6705bab7b1869a675bebb04faa579807fca95913ea9bd9a1993d57b.css" integrity="sha256-4c/BArZwW6t7GGmmdb67BPqleYB/ypWRPqm9mhmT1Xs=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.css">
  
-      <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.min.01d750faaa2a09dced49322d45beefaa8d040a5b1f5e9259da05f3b2e777d58f.css" integrity="sha256-AddQ&#43;qoqCdztSTItRb7vqo0EClsfXpJZ2gXzsud31Y8=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.css">
 
 
   </head>
@@ -331,12 +331,12 @@
   </h1>
 
   <p class="serv_Para">
-    Founded in 2025 in the heart of the Himalayas, HuSig is dedicated to
-    empowering organizations with tailored, human-driven solutions for
-    data-powered advantages. Our team comprises the very best data scientists,
-    data engineers, decision scientists, and industry experts who work
-    collaboratively to accelerate your strategic vision through data and
-    analytics.
+    Founded in 2025 in the heart of the Himalayas, HuSig helps organizations
+    turn data into a strategic asset. Our team of expert data scientists,
+    engineers, and decision-makers collaborates with you to unlock value, drive
+    innovation, and turn vision into results. For many clients, we operate as
+    their full-service data team—providing the skills, speed, and scale of an
+    in-house department, without the overhead.
   </p>
 
   <img
@@ -348,43 +348,29 @@
   <div id="about-page-sec-2">
     <div id="left-side-about-s2">
       <p class="serv_Title">
-        Meet an expert at HuSig to transform your data challenges into
-        opportunities and unlock the full potential of your business.
+        Speak with a HuSig expert today to turn your toughest data challenges
+        into game-changing opportunities.
       </p>
-      <img
-        id="about-us-sec2-img"
-        src="../../images/aboutus/about_us_decision_science.webp"
-        alt="crop"
-      />
     </div>
     <div id="right-side-about-s2">
       <p class="serv_Para">
-        At HuSig, we rapidly develop, refine, and deploy end-to-end analytics
-        applications using cutting-edge tools and capabilities. We transform raw
-        data into actionable insights, delivering the information you need to
-        make intelligent business decisions. Whether defining a vision and
-        strategy or executing tactical use cases, we help you take an idea from
-        concept through execution.
+        We design and deliver powerful analytics applications—fast. From concept
+        to execution, we transform raw data into insight, helping you act on
+        what matters most.
       </p>
       <br />
       <br />
       <p class="serv_Para">
-        We recognize the significant opportunity to help companies of all sizes
-        leverage the advancements in cloud and emerging technologies. Our
-        approach ensures that you get the most out of your data and technology
-        investments by focusing on long-term analytics needs and developing your
-        internal capacity. We believe in enabling and supporting organizations
-        to efficiently utilize their existing resources and develop
-        self-sufficient analytics cultures over time.
+        Whether you're a startup or an enterprise, we help you maximize your
+        cloud and tech investments. Our solutions don't just solve today's
+        challenges—they build long-term analytics maturity within your teams.
       </p>
       <br />
       <br />
       <p class="serv_Para">
-        At HuSig, we offer personalized analytic solutions tailored to your
-        business needs. From setting up the right analytics strategy to
-        implementing advanced analytics and dashboarding, we guide you every
-        step of the way. Our goal is to uncover the value from your data and
-        build a customized approach that yields quick and sustainable results.
+        Every business is unique—so is our approach. From analytics strategy to
+        implementation and dashboarding, we craft custom solutions that deliver
+        fast, lasting impact.
       </p>
     </div>
   </div>
@@ -556,13 +542,13 @@
 
 
 
-<link rel="stylesheet" href='https://husig.ai/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+<link rel="stylesheet" href='http://localhost:1313/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 
 
-<script defer src='https://husig.ai/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+<script defer src='http://localhost:1313/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
 
 
-<script defer src='https://husig.ai/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
+<script defer src='http://localhost:1313/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
 crossorigin="anonymous"
 onload='renderMathInElement(document.body);'></script>
 
