--- a/about/index.html
+++ b/about/index.html
@@ -19,8 +19,11 @@
     </script>
     <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <title>
-  About | Husig.ai
+  
+    About | Husig.ai
+  
 </title>
 
 
@@ -33,23 +36,23 @@
   content="data, llm, nepal, analytics, consulting, health, AI, data science, data science company in nepal, machine learning, big data, predictive analytics, business intelligence"
 />
 <meta name="robots" content="index, follow" />
-<meta name="author" content="Husig" />
-<meta name="copyright" content="Husig 2024" />
+<meta name="author" content="HuSig" />
+<meta name="copyright" content="HuSig 2025" />
+
+
+<link rel="canonical" href="http://localhost:1313/about/" />
 
 
 <meta
   property="og:title"
-  content="Husig | Empowering organizations to realize value from data at scale."
+  content="About | HuSig"
 />
 <meta
   property="og:description"
   content="We collaborate with organizations to drive sustainable economic growth and achieve cost savings through strategic investments in data, analytics, and AI."
 />
-<meta
-  property="og:image"
-  content="https://husig.ai/images/homepage/feature.png"
-/>
-<meta property="og:url" content="https://husig.ai/" />
+<meta property="og:image" content="https://husig.ai/images/homepage/feature.png" />
+<meta property="og:url" content="http://localhost:1313/about/" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="en_US" />
 
@@ -57,61 +60,99 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta
   name="twitter:title"
-  content="Husig | Empowering organizations to realize value from data at scale."
+  content="About | HuSig"
 />
 <meta
   name="twitter:description"
   content="We collaborate with organizations to drive sustainable economic growth and achieve cost savings through strategic investments in data, analytics, and AI."
 />
-<meta
-  name="twitter:image"
-  content="https://husig.ai/images/homepage/feature.png"
-/>
+<meta name="twitter:image" content="https://husig.ai/images/homepage/feature.png" />
 <meta name="twitter:site" content="@husig" />
 <meta name="twitter:creator" content="@husig" />
 
 
-<link rel="canonical" href="https://husig.ai/" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "HuSig",
+  "url": "https://husig.ai",
+  "logo": "https://husig.ai/images/logo.svg",
+  "sameAs": [
+    "https://www.linkedin.com/company/husig"
+  ]
+}
+</script>
 
 
 <link rel="icon" href="https://husig.ai/favicon.ico" type="image/x-icon" />
-<link
-  rel="shortcut icon"
-  href="https://husig.ai/favicon.ico"
-  type="image/x-icon"
-/>
+<link rel="shortcut icon" href="https://husig.ai/favicon.ico" type="image/x-icon" />
+
+
+<style>
+  .skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background: #512b81;
+    color: white;
+    padding: 8px;
+    z-index: 100;
+    text-decoration: none;
+  }
+  .skip-link:focus {
+    top: 0;
+  }
+</style>
+<a href="#main-content" class="skip-link">Skip to main content</a>
+
 
 
     <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.css">
- 
+
+
     <link rel="stylesheet" href="/css/contact_us_form.css">
- 
+
+
     <link rel="stylesheet" href="/css/homepage/homepageFaq.css">
- 
+
+
     <link rel="stylesheet" href="/css/homepage/homepageSection5.css">
- 
+
+
     <link rel="stylesheet" href="/css/homepage/homepageTestimonials.css">
- 
+
+
     <link rel="stylesheet" href="/css/main.css">
- 
+
+
     <link rel="stylesheet" href="/css/homepage.css">
- 
+
+
     <link rel="stylesheet" href="/css/my_components.css">
- 
+
+
       <script src="/js/main.js"></script>
- 
+
+
     <link rel="stylesheet" href="/css/services_page/serv_section_1.css">
- 
+
+
     <link rel="stylesheet" href="/css/services_page/serv_section_2.css">
- 
+
+
     <link rel="stylesheet" href="/css/platform/platform.css">
- 
+
+
     <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.css">
- 
+
+
     <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.css">
- 
+
+
     <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.css">
- 
+
+
     <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.css">
 
 
