update placeholder content

--- a/artificial_intelligence/index.html
+++ b/artificial_intelligence/index.html
@@ -3,7 +3,7 @@
   lang="en-us"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-8NRNHKW4HD"
@@ -40,7 +40,7 @@
 <meta name="copyright" content="HuSig 2025" />
 
 
-<link rel="canonical" href="http://localhost:1313/artificial_intelligence/" />
+<link rel="canonical" href="https://husig.ai/artificial_intelligence/" />
 
 
 <meta
@@ -52,7 +52,7 @@
   content="We collaborate with organizations to drive sustainable economic growth and achieve cost savings through strategic investments in data, analytics, and AI."
 />
 <meta property="og:image" content="https://husig.ai/images/homepage/feature.png" />
-<meta property="og:url" content="http://localhost:1313/artificial_intelligence/" />
+<meta property="og:url" content="https://husig.ai/artificial_intelligence/" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="en_US" />
 
@@ -108,52 +108,52 @@
 
 
 
-    <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.min.cceadcc5ed5921858ad756fab05cff818682e571b7406736cc21888bcfffded4.css" integrity="sha256-zOrcxe1ZIYWK11b6sFz/gYaC5XG3QGc2zCGIi8//3tQ=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/contact_us_form.css">
+      <link rel="stylesheet" href="/css/contact_us_form.min.78702a7028ada28827c17f75e36db0f7067664ae8753f0d888b6b166ba7bffe6.css" integrity="sha256-eHAqcCitoognwX91422w9wZ2ZK6HU/DYiLaxZrp7/&#43;Y=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageFaq.css">
+      <link rel="stylesheet" href="/css/homepage/homepageFaq.min.c4c228e473964211a5d5bd262223951dc75a955e3458fe5cc76d42a9ae0df323.css" integrity="sha256-xMIo5HOWQhGl1b0mIiOVHcdalV40WP5cx21Cqa4N8yM=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageSection5.css">
+      <link rel="stylesheet" href="/css/homepage/homepageSection5.min.ac0a28048f48739498f729a75d4f3f53159a7a8534787347326ebda6ce2262e1.css" integrity="sha256-rAooBI9Ic5SY9ymnXU8/UxWaeoU0eHNHMm69ps4iYuE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageTestimonials.css">
+      <link rel="stylesheet" href="/css/homepage/homepageTestimonials.min.0cd9246b2c044f78a6cb6834e245cc6aef5fea5060a757a8549ae08ad7f26e7a.css" integrity="sha256-DNkkaywET3imy2g04kXMau9f6lBgp1eoVJrgitfybno=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/css/main.min.127783c39a16569766f86f71205d910897dec0e0a9151febefd114950f941651.css" integrity="sha256-EneDw5oWVpdm&#43;G9xIF2RCJfewOCpFR/r79EUlQ&#43;UFlE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage.css">
+      <link rel="stylesheet" href="/css/homepage.min.605c552560c2ef0cb4ffa9a551340fb8abb5e6a45ae4ec3ee0aaa8f62c4796a1.css" integrity="sha256-YFxVJWDC7wy0/6mlUTQPuKu15qRa5Ow&#43;4Kqo9ixHlqE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/my_components.css">
+      <link rel="stylesheet" href="/css/my_components.min.f31d97e2464875bd8a15794d39876cf87054836a39e37bdc774686a98232bf28.css" integrity="sha256-8x2X4kZIdb2KFXlNOYds&#43;HBUg2o543vcd0aGqYIyvyg=" crossorigin="anonymous">
 
 
-      <script src="/js/main.js"></script>
+      <script src="/js/main.0c4153223239301b925bee9813e11ebe135f8a58b95d695161c7490826bd3e27.js" integrity="sha256-DEFTIjI5MBuSW&#43;6YE&#43;EevhNfili5XWlRYcdJCCa9Pic=" crossorigin="anonymous"></script>
 
 
-    <link rel="stylesheet" href="/css/services_page/serv_section_1.css">
+      <link rel="stylesheet" href="/css/services_page/serv_section_1.min.9f337b1e034e6f21eabdca1887cc7a305d1b381a22ac94e0d5d6e60b2612a3b0.css" integrity="sha256-nzN7HgNObyHqvcoYh8x6MF0bOBoirJTg1dbmCyYSo7A=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/services_page/serv_section_2.css">
+      <link rel="stylesheet" href="/css/services_page/serv_section_2.min.35c18cf3ee848c3a6455835b5592220e06501d4cb7e57783524db6134a84285f.css" integrity="sha256-NcGM8&#43;6EjDpkVYNbVZIiDgZQHUy35XeDUk22E0qEKF8=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/platform/platform.css">
+      <link rel="stylesheet" href="/css/platform/platform.min.96ecef5778e3f01608636ac5e78a6bbed818f352b4b84e43482cb34ac3669501.css" integrity="sha256-luzvV3jj8BYIY2rF54prvtgY81K0uE5DSCyzSsNmlQE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.min.0eb2ec5a3fe23f85115cd53a76b93615061bab94b70129887126749a0d90bb51.css" integrity="sha256-DrLsWj/iP4URXNU6drk2FQYbq5S3ASmIcSZ0mg2Qu1E=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.min.af79c53885cabbe8f57e5d8a6238f01166dd0d07b08c3cf121091290b36ea8ee.css" integrity="sha256-r3nFOIXKu&#43;j1fl2KYjjwEWbdDQewjDzxIQkSkLNuqO4=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.min.e1cfc102b6705bab7b1869a675bebb04faa579807fca95913ea9bd9a1993d57b.css" integrity="sha256-4c/BArZwW6t7GGmmdb67BPqleYB/ypWRPqm9mhmT1Xs=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.min.01d750faaa2a09dced49322d45beefaa8d040a5b1f5e9259da05f3b2e777d58f.css" integrity="sha256-AddQ&#43;qoqCdztSTItRb7vqo0EClsfXpJZ2gXzsud31Y8=" crossorigin="anonymous">
 
 
   </head>
@@ -371,16 +371,16 @@
     <img src="/images/homepage/DecisionScienceIllustCrop.webp" alt="" />
     <div class="text_div_serv_page">
       <p class="serv_Para">
-        Our Artificial Intelligence services are designed to transform your
-        business by leveraging the latest AI technologies and methodologies. We
-        help you unlock new opportunities, optimize processes, and drive
-        innovation.
+        Our Artificial Intelligence services are designed to revolutionize your
+        business by harnessing cutting-edge AI technologies and methodologies.
+        We empower your organization to uncover new opportunities, optimize
+        operations, and drive transformative innovation.
       </p>
       <br /><br />
       <p class="serv_Para">
-        From developing intelligent applications to implementing advanced
-        machine learning models, our AI solutions are tailored to meet your
-        specific needs and deliver measurable business impact.
+        From crafting intelligent applications to deploying advanced machine
+        learning models, our AI solutions are specifically tailored to address
+        your unique challenges and deliver measurable, impactful results.
       </p>
     </div>
   </div>
@@ -390,52 +390,53 @@
       <h3 class="serv_PurpleTitle">Large Language Models (LLMs)</h3>
       <p>
         We specialize in developing and fine-tuning large language models (LLMs)
-        that can understand and generate human-like text. These models enhance
-        customer interactions, automate content creation, and provide advanced
-        language capabilities.
+        capable of understanding and generating human-like text. These models
+        enhance customer interactions, automate content creation, and unlock
+        sophisticated language capabilities.
       </p>
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Data Annotation and Curation</h3>
       <p>
-        Our data annotation and curation services ensure that your AI models are
-        trained on high-quality, accurate data. We provide comprehensive data
-        labeling, cleaning, and enrichment services to enhance the performance
-        of your AI systems.
+        Our data annotation and curation services ensure your AI models are
+        trained on high-quality, precise data. We provide comprehensive
+        labeling, cleaning, and enrichment services to enhance the accuracy and
+        performance of your AI systems.
       </p>
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Machine Learning Operations (MLOps)</h3>
       <p>
         We implement MLOps practices to streamline the deployment, monitoring,
-        and management of machine learning models. Our solutions ensure that
-        your models remain reliable, scalable, and easy to maintain.
+        and management of machine learning models. Our solutions ensure your
+        models remain reliable, scalable, and maintainable over time.
       </p>
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Computer Vision</h3>
       <p>
         We leverage computer vision technologies to analyze and interpret visual
-        data. Our solutions include image and video analysis, object detection,
-        and facial recognition, providing actionable insights and automation
-        capabilities.
+        data. Our solutions encompass image and video analysis, object
+        detection, and facial recognition, providing valuable insights and
+        automation capabilities.
       </p>
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Generative AI</h3>
       <p>
-        Our generative AI solutions help you create new content, enhance
-        creativity, and innovate. We develop applications using techniques such
-        as GANs and LLMs to generate realistic images, text, and other media.
+        Our generative AI solutions empower you to create innovative content,
+        fuel creativity, and drive new possibilities. We develop applications
+        using techniques such as GANs and LLMs to generate realistic images,
+        text, and other forms of media.
       </p>
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">AI Strategy and Consulting</h3>
       <p>
-        We offer strategic consulting services to help you define and implement
-        your AI vision. Our team provides guidance on AI adoption, roadmap
-        development, and the integration of AI technologies into your business
-        processes.
+        We offer expert consulting services to help define and implement your AI
+        strategy. From AI adoption to roadmap development, we provide guidance
+        on integrating AI technologies to accelerate your business
+        transformation.
       </p>
     </div>
   </div>
@@ -454,20 +455,19 @@
     />
 
     <div class="sec_4_texts">
-      <h3 class="husig_midtitle">Client-Centric Approach</h3>
+      <h3 class="husig_midtitle">Client-Focused Solutions</h3>
       <ul class="sec-4 icon-list husig_h3_tag">
         <li>
           <img
             src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
-          />Stakeholder Engagement
+          />Stakeholder Collaboration
         </li>
         <p class="sec_4_para hero_desc">
-          We work closely with your team to understand your goals and ensure
-          that our AI solutions align with your business objectives. This
-          collaborative approach maximizes the impact and adoption of our AI
-          services.
+          We work in close partnership with your team, ensuring our AI solutions
+          align perfectly with your business goals. This collaborative approach
+          maximizes the effectiveness and adoption of our AI services.
         </p>
 
         <li class="second_li">
@@ -475,12 +475,12 @@
             src="/images/homepage/list_icon.svg"
             alt="list icon"
             class="list_icon_image"
-          />Scalability and Sustainability
+          />Scalable and Sustainable Solutions
         </li>
         <p class="hero_desc sec_4_para">
-          Our AI solutions are designed for scalability and sustainability,
-          supporting your business as it grows and evolves. We provide training
-          and support to maintain and expand your AI capabilities over time.
+          Our AI solutions are designed with scalability in mind, evolving as
+          your business grows. We provide ongoing training and support to ensure
+          long-term success and continuous improvement of your AI capabilities.
         </p>
 
         <li class="third_li">
@@ -491,9 +491,9 @@
           />AI-Driven Innovation
         </li>
         <p class="hero_desc sec_4_para">
-          Enable your team to drive AI-driven innovation with tools and
-          platforms that empower them to develop and deploy AI solutions
-          independently.
+          Empower your team to lead AI-driven innovation with the tools and
+          platforms we provide, enabling them to independently develop and
+          deploy transformative AI solutions.
         </p>
       </ul>
     </div>
@@ -666,13 +666,13 @@
 
 
 
-<link rel="stylesheet" href='http://localhost:1313/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+<link rel="stylesheet" href='https://husig.ai/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 
 
-<script defer src='http://localhost:1313/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+<script defer src='https://husig.ai/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
 
 
-<script defer src='http://localhost:1313/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
+<script defer src='https://husig.ai/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
 crossorigin="anonymous"
 onload='renderMathInElement(document.body);'></script>
 
