--- a/analytics/index.html
+++ b/analytics/index.html
@@ -3,7 +3,7 @@
   lang="en-us"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-8NRNHKW4HD"
@@ -40,7 +40,7 @@
 <meta name="copyright" content="HuSig 2025" />
 
 
-<link rel="canonical" href="http://localhost:1313/analytics/" />
+<link rel="canonical" href="https://husig.ai/analytics/" />
 
 
 <meta
@@ -52,7 +52,7 @@
   content="We collaborate with organizations to drive sustainable economic growth and achieve cost savings through strategic investments in data, analytics, and AI."
 />
 <meta property="og:image" content="https://husig.ai/images/homepage/feature.png" />
-<meta property="og:url" content="http://localhost:1313/analytics/" />
+<meta property="og:url" content="https://husig.ai/analytics/" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="en_US" />
 
@@ -108,52 +108,52 @@
 
 
 
-    <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.min.cceadcc5ed5921858ad756fab05cff818682e571b7406736cc21888bcfffded4.css" integrity="sha256-zOrcxe1ZIYWK11b6sFz/gYaC5XG3QGc2zCGIi8//3tQ=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/contact_us_form.css">
+      <link rel="stylesheet" href="/css/contact_us_form.min.78702a7028ada28827c17f75e36db0f7067664ae8753f0d888b6b166ba7bffe6.css" integrity="sha256-eHAqcCitoognwX91422w9wZ2ZK6HU/DYiLaxZrp7/&#43;Y=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageFaq.css">
+      <link rel="stylesheet" href="/css/homepage/homepageFaq.min.c4c228e473964211a5d5bd262223951dc75a955e3458fe5cc76d42a9ae0df323.css" integrity="sha256-xMIo5HOWQhGl1b0mIiOVHcdalV40WP5cx21Cqa4N8yM=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageSection5.css">
+      <link rel="stylesheet" href="/css/homepage/homepageSection5.min.ac0a28048f48739498f729a75d4f3f53159a7a8534787347326ebda6ce2262e1.css" integrity="sha256-rAooBI9Ic5SY9ymnXU8/UxWaeoU0eHNHMm69ps4iYuE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageTestimonials.css">
+      <link rel="stylesheet" href="/css/homepage/homepageTestimonials.min.0cd9246b2c044f78a6cb6834e245cc6aef5fea5060a757a8549ae08ad7f26e7a.css" integrity="sha256-DNkkaywET3imy2g04kXMau9f6lBgp1eoVJrgitfybno=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/css/main.min.127783c39a16569766f86f71205d910897dec0e0a9151febefd114950f941651.css" integrity="sha256-EneDw5oWVpdm&#43;G9xIF2RCJfewOCpFR/r79EUlQ&#43;UFlE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage.css">
+      <link rel="stylesheet" href="/css/homepage.min.605c552560c2ef0cb4ffa9a551340fb8abb5e6a45ae4ec3ee0aaa8f62c4796a1.css" integrity="sha256-YFxVJWDC7wy0/6mlUTQPuKu15qRa5Ow&#43;4Kqo9ixHlqE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/my_components.css">
+      <link rel="stylesheet" href="/css/my_components.min.f31d97e2464875bd8a15794d39876cf87054836a39e37bdc774686a98232bf28.css" integrity="sha256-8x2X4kZIdb2KFXlNOYds&#43;HBUg2o543vcd0aGqYIyvyg=" crossorigin="anonymous">
 
 
-      <script src="/js/main.js"></script>
+      <script src="/js/main.0c4153223239301b925bee9813e11ebe135f8a58b95d695161c7490826bd3e27.js" integrity="sha256-DEFTIjI5MBuSW&#43;6YE&#43;EevhNfili5XWlRYcdJCCa9Pic=" crossorigin="anonymous"></script>
 
 
-    <link rel="stylesheet" href="/css/services_page/serv_section_1.css">
+      <link rel="stylesheet" href="/css/services_page/serv_section_1.min.9f337b1e034e6f21eabdca1887cc7a305d1b381a22ac94e0d5d6e60b2612a3b0.css" integrity="sha256-nzN7HgNObyHqvcoYh8x6MF0bOBoirJTg1dbmCyYSo7A=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/services_page/serv_section_2.css">
+      <link rel="stylesheet" href="/css/services_page/serv_section_2.min.35c18cf3ee848c3a6455835b5592220e06501d4cb7e57783524db6134a84285f.css" integrity="sha256-NcGM8&#43;6EjDpkVYNbVZIiDgZQHUy35XeDUk22E0qEKF8=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/platform/platform.css">
+      <link rel="stylesheet" href="/css/platform/platform.min.96ecef5778e3f01608636ac5e78a6bbed818f352b4b84e43482cb34ac3669501.css" integrity="sha256-luzvV3jj8BYIY2rF54prvtgY81K0uE5DSCyzSsNmlQE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.min.0eb2ec5a3fe23f85115cd53a76b93615061bab94b70129887126749a0d90bb51.css" integrity="sha256-DrLsWj/iP4URXNU6drk2FQYbq5S3ASmIcSZ0mg2Qu1E=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.min.af79c53885cabbe8f57e5d8a6238f01166dd0d07b08c3cf121091290b36ea8ee.css" integrity="sha256-r3nFOIXKu&#43;j1fl2KYjjwEWbdDQewjDzxIQkSkLNuqO4=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.min.e1cfc102b6705bab7b1869a675bebb04faa579807fca95913ea9bd9a1993d57b.css" integrity="sha256-4c/BArZwW6t7GGmmdb67BPqleYB/ypWRPqm9mhmT1Xs=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.min.01d750faaa2a09dced49322d45beefaa8d040a5b1f5e9259da05f3b2e777d58f.css" integrity="sha256-AddQ&#43;qoqCdztSTItRb7vqo0EClsfXpJZ2gXzsud31Y8=" crossorigin="anonymous">
 
 
   </head>
@@ -371,17 +371,14 @@
     <img src="/images/homepage/Analytics.webp" alt="" />
     <div class="text_div_serv_page">
       <p class="serv_Para">
-        Our Analytics services are crafted to harness the power of data,
-        leveraging advanced techniques and cutting-edge technologies to drive
-        strategic decision-making and operational excellence.
+        We empower organizations to make smarter decisions and optimize
+        operations through the strategic use of data and technology.
       </p>
       <br /><br />
       <p class="serv_Para">
-        We combine technical proficiency with a client-centric approach to
-        deliver analytics solutions that drive real business impact. Whether
-        you're looking to optimize operations, uncover new insights, move
-        towards self-service analytics, or drive innovation, our team of experts
-        is here to help you harness the full power of your data.
+        Our solutions are straightforward and results-driven. Whether you're
+        enhancing efficiency, uncovering valuable insights, or developing
+        data-powered tools, we're with you at every stage to ensure success.
       </p>
     </div>
   </div>
@@ -390,201 +387,48 @@
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Data Harmonization</h3>
       <p>
-        We specialize in harmonizing data from disparate sources, systems, and
-        databases, creating a unified and consistent view of your organization's
-        data landscape. This harmonization process enables seamless analysis and
-        decision-making across departments and functions.
+        We bring together data from different sources to give you one clear view
+        of your business, making it easier to analyze and make decisions.
       </p>
-      <!-- <ul class="serv_ListText">
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Data Harmonization
-          
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Cloud Integration
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Task Automation
-        </li>
-      </ul> -->
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Cloud Integration</h3>
       <p>
-        Leveraging the scalability and flexibility of cloud platforms such as
-        Amazon Web Services (AWS), Microsoft Azure, and Google Cloud Platform
-        (GCP), we design and implement cloud-based analytics solutions that
-        empower your business to scale efficiently and adapt to changing needs.
+        We help you move your data and tools to the cloud, so your business can
+        scale and adapt easily to changes.
       </p>
-      <!-- <ul class="serv_ListText">
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Business-Centric Approach
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Iterative Design and Development
-        </li>
-      </ul> -->
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Advanced Reporting and Visualization</h3>
       <p>
-        We design and develop interactive dashboards that provide intuitive,
-        real-time insights into your key performance metrics and business
-        trends. These dashboards empower decision-makers at all levels of your
-        organization to explore data, uncover insights, and drive informed
-        actions.
+        Our dashboards offer real-time insights into your business performance,
+        helping you make informed decisions quickly.
       </p>
-      <!-- <ul class="serv_ListText">
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Interactive Dashboards
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Custom Reports
-        </li>
-      </ul> -->
     </div>
     <div class="box-1">
-      <h3 class="serv_PurpleTitle">Exploratory Data Analysis (EDA)</h3>
+      <h3 class="serv_PurpleTitle">Exploratory Data Analysis</h3>
       <p>
-        We conduct thorough exploratory data analysis to uncover patterns,
-        anomalies, and relationships within your data. This initial step is
-        crucial for understanding the data landscape and guiding subsequent
-        analysis.
+        We explore your data to identify trends and patterns, laying the
+        foundation for deeper analysis and smarter decisions.
       </p>
-      <!-- <ul class="serv_ListText">
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Tool Selection and Implementation
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Technical Proficiency: Large Language Models (LLMs) and
-          Retrieval-Augmented Generation (RAGs)
-        </li>
-      </ul> -->
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Predictive Analytics</h3>
       <p>
-        Using advanced statistical techniques and machine learning algorithms,
-        we develop models that predict future trends and behaviors. These
-        predictive insights help you anticipate changes and make proactive
-        decisions.
+        Our models help you predict future trends and behaviors, enabling you to
+        make proactive decisions.
       </p>
-      <!-- <ul class="serv_ListText">
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Exploratory Data Analysis (EDA)
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Predictive Analytics
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Operational Analytics
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Performance Monitoring
-        </li>
-      </ul> -->
     </div>
     <div class="box-1">
       <h3 class="serv_PurpleTitle">Performance Monitoring</h3>
       <p>
-        Our analytics solutions include ongoing performance monitoring to ensure
-        that your business objectives are being met. We provide regular updates
-        and insights to keep you informed and enable continuous improvement.
+        We provide ongoing monitoring of your business metrics to help you stay
+        on track and improve continuously.
       </p>
-      <!-- <ul class="serv_ListText">
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Stakeholder Engagement
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Scalability and Sustainability
-        </li>
-        <li>
-          <img
-            src="/images/homepage/list_icon.svg"
-            alt="list icon"
-            class="list_icon_image"
-          />
-          Self-Service BI
-        </li>
-      </ul> -->
     </div>
   </div>
 </section>
+
 <section id="home-sec-4">
   <div class="Shimmy_sza_container">
     <div id="Section4Shimmy" class="Shimmy_sza"></div>
@@ -598,7 +442,7 @@
     />
 
     <div class="sec_4_texts">
-      <h3 class="husig_midtitle">Client-Centric Approach</h3>
+      <h3 class="husig_midtitle">Collaborative Partnership</h3>
       <ul class="sec-4 icon-list husig_h3_tag">
         <li>
           <img
@@ -608,10 +452,8 @@
           />Stakeholder Engagement
         </li>
         <p class="sec_4_para hero_desc">
-          We prioritize engaging with your team to understand their needs and
-          ensure that our solutions align with your business goals. This
-          collaborative approach ensures high adoption rates and maximizes the
-          impact of our analytics services.
+          We work closely with your team to ensure our solutions match your
+          goals and drive real impact.
         </p>
 
         <li class="second_li">
@@ -621,12 +463,9 @@
             class="list_icon_image"
           />Scalability and Sustainability
         </li>
-
         <p class="hero_desc sec_4_para">
-          Our solutions are designed to be scalable and sustainable, supporting
-          your business as it grows and evolves. We provide the training and
-          support needed to maintain and expand your analytics capabilities over
-          time.
+          Our solutions are designed to grow with your business, ensuring
+          long-term success and adaptability.
         </p>
 
         <li class="third_li">
@@ -636,11 +475,9 @@
             class="list_icon_image"
           />Self-Service BI
         </li>
-
         <p class="hero_desc sec_4_para">
-          Empower your team with self-service business intelligence tools that
-          enable them to create their own reports and dashboards without needing
-          extensive technical expertise.
+          We empower your team with easy-to-use tools, so they can generate
+          reports and insights without needing technical expertise.
         </p>
       </ul>
     </div>
@@ -813,13 +650,13 @@
 
 
 
-<link rel="stylesheet" href='http://localhost:1313/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+<link rel="stylesheet" href='https://husig.ai/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 
 
-<script defer src='http://localhost:1313/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+<script defer src='https://husig.ai/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
 
 
-<script defer src='http://localhost:1313/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
+<script defer src='https://husig.ai/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
 crossorigin="anonymous"
 onload='renderMathInElement(document.body);'></script>
 
