--- a/husig_fabri/index.html
+++ b/husig_fabri/index.html
@@ -3,7 +3,7 @@
   lang="en-us"
   dir="ltr"
 >
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-8NRNHKW4HD"
@@ -40,7 +40,7 @@
 <meta name="copyright" content="HuSig 2025" />
 
 
-<link rel="canonical" href="http://localhost:1313/husig_fabri/" />
+<link rel="canonical" href="https://husig.ai/husig_fabri/" />
 
 
 <meta
@@ -52,7 +52,7 @@
   content="We collaborate with organizations to drive sustainable economic growth and achieve cost savings through strategic investments in data, analytics, and AI."
 />
 <meta property="og:image" content="https://husig.ai/images/homepage/feature.png" />
-<meta property="og:url" content="http://localhost:1313/husig_fabri/" />
+<meta property="og:url" content="https://husig.ai/husig_fabri/" />
 <meta property="og:type" content="website" />
 <meta property="og:locale" content="en_US" />
 
@@ -108,52 +108,52 @@
 
 
 
-    <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobile/homepageMobileResponsive.min.cceadcc5ed5921858ad756fab05cff818682e571b7406736cc21888bcfffded4.css" integrity="sha256-zOrcxe1ZIYWK11b6sFz/gYaC5XG3QGc2zCGIi8//3tQ=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/contact_us_form.css">
+      <link rel="stylesheet" href="/css/contact_us_form.min.78702a7028ada28827c17f75e36db0f7067664ae8753f0d888b6b166ba7bffe6.css" integrity="sha256-eHAqcCitoognwX91422w9wZ2ZK6HU/DYiLaxZrp7/&#43;Y=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageFaq.css">
+      <link rel="stylesheet" href="/css/homepage/homepageFaq.min.c4c228e473964211a5d5bd262223951dc75a955e3458fe5cc76d42a9ae0df323.css" integrity="sha256-xMIo5HOWQhGl1b0mIiOVHcdalV40WP5cx21Cqa4N8yM=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageSection5.css">
+      <link rel="stylesheet" href="/css/homepage/homepageSection5.min.ac0a28048f48739498f729a75d4f3f53159a7a8534787347326ebda6ce2262e1.css" integrity="sha256-rAooBI9Ic5SY9ymnXU8/UxWaeoU0eHNHMm69ps4iYuE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage/homepageTestimonials.css">
+      <link rel="stylesheet" href="/css/homepage/homepageTestimonials.min.0cd9246b2c044f78a6cb6834e245cc6aef5fea5060a757a8549ae08ad7f26e7a.css" integrity="sha256-DNkkaywET3imy2g04kXMau9f6lBgp1eoVJrgitfybno=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/main.css">
+      <link rel="stylesheet" href="/css/main.min.127783c39a16569766f86f71205d910897dec0e0a9151febefd114950f941651.css" integrity="sha256-EneDw5oWVpdm&#43;G9xIF2RCJfewOCpFR/r79EUlQ&#43;UFlE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/homepage.css">
+      <link rel="stylesheet" href="/css/homepage.min.605c552560c2ef0cb4ffa9a551340fb8abb5e6a45ae4ec3ee0aaa8f62c4796a1.css" integrity="sha256-YFxVJWDC7wy0/6mlUTQPuKu15qRa5Ow&#43;4Kqo9ixHlqE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/my_components.css">
+      <link rel="stylesheet" href="/css/my_components.min.f31d97e2464875bd8a15794d39876cf87054836a39e37bdc774686a98232bf28.css" integrity="sha256-8x2X4kZIdb2KFXlNOYds&#43;HBUg2o543vcd0aGqYIyvyg=" crossorigin="anonymous">
 
 
-      <script src="/js/main.js"></script>
+      <script src="/js/main.0c4153223239301b925bee9813e11ebe135f8a58b95d695161c7490826bd3e27.js" integrity="sha256-DEFTIjI5MBuSW&#43;6YE&#43;EevhNfili5XWlRYcdJCCa9Pic=" crossorigin="anonymous"></script>
 
 
-    <link rel="stylesheet" href="/css/services_page/serv_section_1.css">
+      <link rel="stylesheet" href="/css/services_page/serv_section_1.min.9f337b1e034e6f21eabdca1887cc7a305d1b381a22ac94e0d5d6e60b2612a3b0.css" integrity="sha256-nzN7HgNObyHqvcoYh8x6MF0bOBoirJTg1dbmCyYSo7A=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/services_page/serv_section_2.css">
+      <link rel="stylesheet" href="/css/services_page/serv_section_2.min.35c18cf3ee848c3a6455835b5592220e06501d4cb7e57783524db6134a84285f.css" integrity="sha256-NcGM8&#43;6EjDpkVYNbVZIiDgZQHUy35XeDUk22E0qEKF8=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/platform/platform.css">
+      <link rel="stylesheet" href="/css/platform/platform.min.96ecef5778e3f01608636ac5e78a6bbed818f352b4b84e43482cb34ac3669501.css" integrity="sha256-luzvV3jj8BYIY2rF54prvtgY81K0uE5DSCyzSsNmlQE=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobileLandscape/homepageLandscapeResponsive.min.0eb2ec5a3fe23f85115cd53a76b93615061bab94b70129887126749a0d90bb51.css" integrity="sha256-DrLsWj/iP4URXNU6drk2FQYbq5S3ASmIcSZ0mg2Qu1E=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/smallScreens/homepageSmallScreenResponsive.min.af79c53885cabbe8f57e5d8a6238f01166dd0d07b08c3cf121091290b36ea8ee.css" integrity="sha256-r3nFOIXKu&#43;j1fl2KYjjwEWbdDQewjDzxIQkSkLNuqO4=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/tablet/homepageTabletResponsive.min.e1cfc102b6705bab7b1869a675bebb04faa579807fca95913ea9bd9a1993d57b.css" integrity="sha256-4c/BArZwW6t7GGmmdb67BPqleYB/ypWRPqm9mhmT1Xs=" crossorigin="anonymous">
 
 
-    <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.css">
+      <link rel="stylesheet" href="/css/responsive/mobile/aboutpageMobileResponsive.min.01d750faaa2a09dced49322d45beefaa8d040a5b1f5e9259da05f3b2e777d58f.css" integrity="sha256-AddQ&#43;qoqCdztSTItRb7vqo0EClsfXpJZ2gXzsud31Y8=" crossorigin="anonymous">
 
 
   </head>
@@ -366,8 +366,8 @@
   <div class="plat_div_top">
     <h1 class="serv_Title">HuSig Fabri</h1>
     <h2 class="top_section_h2">
-      Overcome data scarcity challenges and enhance model training with
-      realistic synthetic datasets.
+      Solve data scarcity and privacy concerns with high-fidelity synthetic
+      datasets tailored for your domain.
     </h2>
   </div>
 
@@ -380,6 +380,7 @@
         <div class="accordion-item-2">
           <button class="unique-accordion-header husig_fabri_first_button">
             <div id="serv-pag-list-icon">
+              <!-- SVG ICON -->
               <svg
                 viewBox="0 0 24 25"
                 fill="none"
@@ -428,23 +429,22 @@
                 />
               </svg>
             </div>
-
             <p>Generative Modeling</p>
           </button>
           <div class="unique-accordion-content">
             <p>
-              HuSig Fabri utilizes state-of-the-art generative modeling
-              techniques such as Generative Adversarial Networks (GANs),
-              Variational Autoencoders (VAEs), and Transformer models to
-              generate synthetic data samples that closely resemble real-world
-              data distributions. This enables organizations to overcome data
-              scarcity challenges and train AI models more effectively.
+              Leverage advanced models like GANs, VAEs, and Transformers to
+              generate synthetic data that mirrors the statistical properties of
+              real-world datasets—ideal for training, validation, or simulation
+              without compromising real data.
             </p>
           </div>
         </div>
+
         <div class="accordion-item-2">
           <button class="unique-accordion-header">
             <div id="serv-pag-list-icon">
+              <!-- SVG ICON -->
               <svg
                 viewBox="0 0 24 25"
                 fill="none"
@@ -493,17 +493,14 @@
                 />
               </svg>
             </div>
-
             <p>Data Augmentation</p>
           </button>
           <div class="unique-accordion-content">
             <p>
-              HuSig Fabri utilizes state-of-the-art generative modeling
-              techniques such as Generative Adversarial Networks (GANs),
-              Variational Autoencoders (VAEs), and Transformer models to
-              generate synthetic data samples that closely resemble real-world
-              data distributions. This enables organizations to overcome data
-              scarcity challenges and train AI models more effectively.
+              Expand and diversify your existing datasets by generating new,
+              realistic variations. Boost model performance in low-resource
+              scenarios or underrepresented classes without manual labeling
+              overhead.
             </p>
           </div>
         </div>
@@ -511,6 +508,7 @@
         <div class="accordion-item-2">
           <button class="unique-accordion-header">
             <div id="serv-pag-list-icon">
+              <!-- SVG ICON -->
               <svg
                 viewBox="0 0 24 25"
                 fill="none"
@@ -559,17 +557,14 @@
                 />
               </svg>
             </div>
-
             <p>Domain-Specific Template</p>
           </button>
           <div class="unique-accordion-content">
             <p>
-              HuSig Fabri utilizes state-of-the-art generative modeling
-              techniques such as Generative Adversarial Networks (GANs),
-              Variational Autoencoders (VAEs), and Transformer models to
-              generate synthetic data samples that closely resemble real-world
-              data distributions. This enables organizations to overcome data
-              scarcity challenges and train AI models more effectively.
+              Create synthetic data aligned with your business context. HuSig
+              Fabri allows fine-tuning of models to mimic domain-specific
+              distributions, whether it's medical, financial, industrial, or
+              custom data environments.
             </p>
           </div>
         </div>
@@ -577,6 +572,7 @@
         <div class="accordion-item-2">
           <button class="unique-accordion-header">
             <div id="serv-pag-list-icon">
+              <!-- SVG ICON -->
               <svg
                 viewBox="0 0 24 25"
                 fill="none"
@@ -625,17 +621,14 @@
                 />
               </svg>
             </div>
-
             <p>Privacy-Preserving Generation</p>
           </button>
           <div class="unique-accordion-content">
             <p>
-              HuSig Fabri utilizes state-of-the-art generative modeling
-              techniques such as Generative Adversarial Networks (GANs),
-              Variational Autoencoders (VAEs), and Transformer models to
-              generate synthetic data samples that closely resemble real-world
-              data distributions. This enables organizations to overcome data
-              scarcity challenges and train AI models more effectively.
+              Ensure compliance with data protection regulations by using
+              synthetic data that retains utility without revealing sensitive or
+              personal information—ideal for data sharing, testing, or training
+              in regulated industries.
             </p>
           </div>
         </div>
@@ -810,13 +803,13 @@
 
 
 
-<link rel="stylesheet" href='http://localhost:1313/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
+<link rel="stylesheet" href='https://husig.ai/lib/katex.min.css' integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
 
 
-<script defer src='http://localhost:1313/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
+<script defer src='https://husig.ai/lib/katex.min.js' integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
 
 
-<script defer src='http://localhost:1313/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
+<script defer src='https://husig.ai/lib/contrib/auto-render.min.js' integrity="sha384-kWPLUVMOks5AQFrykwIup5lo0m3iMkkHrD0uJ4H5cjeGihAutqP0yW0J6dpFiVkI"
 crossorigin="anonymous"
 onload='renderMathInElement(document.body);'></script>
 
