remove cs role requirement from bd jd

--- a/careers/bd_specialist/index.html
+++ b/careers/bd_specialist/index.html
@@ -446,7 +446,7 @@
 <h2 id="preferred-qualifications">Preferred Qualifications</h2>
 <h3 id="education--experience">Education &amp; Experience</h3>
 <ul>
-<li>Bachelor&rsquo;s degree in Business, Marketing, Data Science, Computer Science, or related field</li>
+<li>Bachelor&rsquo;s degree in Business, Marketing, or related field</li>
 <li>0-1 year of experience in business development, sales operations, lead generation, or CRM management</li>
 <li>Familiarity with data/analytics/AI industry is a strong plus</li>
 </ul>
