temporarily remove fabri demo

--- a/husig_fabri/index.html
+++ b/husig_fabri/index.html
@@ -636,8 +636,7 @@
     </div>
   </div>
 
-  <!-- Add this section after your existing HuSig Fabri section -->
-<section class="demo_section" id="husig-fabri-demo">
+<!-- <section class="demo_section" id="husig-fabri-demo">
   <div class="demo_container">
     <div class="demo_header">
       <h2 class="demo_title">See HuSig Fabri in Action</h2>
@@ -660,7 +659,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <style>
 .demo_section {
