--- a/careers/ai_partnership_and_growth_associate/index.html
+++ b/careers/ai_partnership_and_growth_associate/index.html
@@ -22,7 +22,7 @@
 
 <title>
   
-    🆕 AI Solutions &amp; Partnerships Associate | Husig.ai
+    AI Solutions &amp; Partnerships Associate | Husig.ai
   
 </title>
 
@@ -45,7 +45,7 @@
 
 <meta
   property="og:title"
-  content="🆕 AI Solutions &amp; Partnerships Associate | HuSig"
+  content="AI Solutions &amp; Partnerships Associate | HuSig"
 />
 <meta
   property="og:description"
@@ -60,7 +60,7 @@
 <meta name="twitter:card" content="summary_large_image" />
 <meta
   name="twitter:title"
-  content="🆕 AI Solutions &amp; Partnerships Associate | HuSig"
+  content="AI Solutions &amp; Partnerships Associate | HuSig"
 />
 <meta
   name="twitter:description"
@@ -369,7 +369,7 @@
   
 
 
-        <h1>🆕 AI Solutions &amp; Partnerships Associate</h1>
+        <h1>AI Solutions &amp; Partnerships Associate</h1>
 
         
         
