--- a/careers/index.html
+++ b/careers/index.html
@@ -303,7 +303,7 @@
             <p>
                 We don't have any open positions at the moment, but we're always interested in hearing from talented
                 individuals. Feel free to send us your resume at
-                <a href="mailto:careers@husig.ai">careers@husig.ai</a>
+                <a href="mailto:ayush@husig.ai">ayush@husig.ai</a>
             </p>
             </div>
         </div>
